Fix nft characters display on mobile resolves issue #82

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -121,3 +121,237 @@
 }
 }
 
+/*nft caraousel mobile*/
+
+@media only screen and (max-width: 420px) {  
+
+  .mobile-char{
+    font-size: 65%; 
+    font-family: 'MagicMedieval', sans-serif;
+    font-weight: 700;
+}
+
+  .mobile-card {
+  position: relative;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: rgba(255, 255, 255, 0);
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  border: 0.0rem solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.0rem; }
+  
+
+  
+      .mobile-card-flex{
+          display: -webkit-box; 
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-wrap: wrap;
+          flex-wrap: nowrap;
+          margin-right: -15px;
+          margin-left: -15px;
+          flex-direction: row;
+          justify-content: center;
+          align-content: center;
+          align-items: center;
+          }
+
+
+    .mobile-card {
+      position: relative;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      min-width: 0;
+      word-wrap: break-word;
+      background-color: rgba(255, 255, 255, 0);
+      -webkit-background-clip: border-box;
+      background-clip: border-box;
+      border: 0.0rem solid rgba(0, 0, 0, 0.125);
+      border-radius: 0.0rem; }
+      
+      .nft-text{
+          font-size: 79%; 
+          font-family: 'MagicMedieval', sans-serif;
+          font-weight: 700;
+        }
+   
+      
+  
+
+  
+          .mobile-card-flip {
+            perspective: 1000px;
+          }
+          .mobile-card-flip:hover .mobile-flip, .mobile-card-flip.hover .mobile-flip {
+            transform: rotateY(180deg);
+          }
+          .mobile-card-flip, .mobile-front, .mobile-back {
+            width: 100%;
+            height: 360px;
+          }
+          .mobile-flip {
+            transition: 0.6s;
+            transform-style: preserve-3d;
+            position: relative;
+          }
+          .mobile-front, .mobile-back {
+            -webkit-backface-visibility:hidden;
+            backface-visibility: hidden;
+            -webkit-backface-visibility:hidden;
+            backface-visibility: hidden;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+          .mobile-front {
+            z-index: 2;
+            transform: rotateY(0deg);
+          }
+          .mobile-back {
+            transform: rotateY(180deg);
+            
+          }
+    
+
+
+
+        
+.mobile-carrousel{
+  position: relative;
+  margin-top: 30px;
+  height: 400px;
+  top: 20%;
+  transform: translateY(-50%);
+  overflow: hidden; 
+}
+
+.mobile-carrousel-inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.mobile-carrousel-open:checked + .mobile-carrousel-item {
+  position: static;
+  opacity: 100;
+}
+
+.mobile-carrousel-item {
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: opacity 0.s ease-out;
+  transition: opacity 0.s ease-out;
+}
+
+.mobile-carrousel-item img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+.mobile-carrousel-control {
+  background: rgba(0, 0, 0, 0.28);
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  font-size: 40px;
+  height: 40px;
+  line-height: 35px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  cursor: pointer;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-align: center;
+  width: 40px;
+  z-index: 10;
+}
+
+.mobile-carrousel-control.prev {
+  left: 2%;
+}
+
+.mobile-carrousel-control.next {
+  right: 2%;
+}
+
+.mobile-carrousel-control:hover {
+  background: rgba(0, 0, 0, 0.8);
+  color: #aaaaaa;
+}
+
+#mobile-carrousel-1:checked ~ .control-1,
+#mobile-carrousel-2:checked ~ .control-2,
+#mobile-carrousel-3:checked ~ .control-3, 
+#mobile-carrousel-4:checked ~ .control-4,
+#mobile-carrousel-5:checked ~ .control-5,
+#mobile-carrousel-6:checked ~ .control-6 
+
+{
+  display: block;
+}
+
+.mobile-carrousel-indicators {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 2%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10;
+}
+
+.mobile-carrousel-indicators li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.mobile-carrousel-bullet {
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 35px;
+}
+
+.mobile-carrousel-bullet:hover {
+  color: #aaaaaa;
+}
+
+#mobile-carrousel-1:checked ~ .control-1 ~ .mobile-carrousel-indicators li:nth-child(1) .mobile-carrousel-bullet,
+#mobile-carrousel-2:checked ~ .control-2 ~ .mobile-carrousel-indicators li:nth-child(2) .mobile-carrousel-bullet,
+#mobile-carrousel-3:checked ~ .control-3 ~ .mobile-carrousel-indicators li:nth-child(3) .mobile-carrousel-bullet, 
+#mobile-carrousel-4:checked ~ .control-4 ~ .mobile-carrousel-indicators li:nth-child(4) .mobile-carrousel-bullet, 
+#mobile-carrousel-5:checked ~ .control-5 ~ .mobile-carrousel-indicators li:nth-child(5) .mobile-carrousel-bullet, 
+#mobile-carrousel-6:checked ~ .control-6 ~ .mobile-carrousel-indicators li:nth-child(6) .mobile-carrousel-bullet {
+  color: #428bca;
+}
+
+
+.mobile-carrousel-caption {
+  top: 60%;
+  bottom: auto;
+  color: rgb(0, 0, 0);
+}
+
+.mobile-carrousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: rgb(0, 0, 0);
+  text-align: center; }
+  
+
+}
